--- a/gui/gui/gui.vcproj
+++ b/gui/gui/gui.vcproj
@@ -402,6 +402,16 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\AboutDialog.h"
+				FileType="3"
+				>
+				<File
+					RelativePath=".\AboutDialog.resx"
+					SubType="Designer"
+					>
+				</File>
+			</File>
+			<File
 				RelativePath=".\AddControlForm.h"
 				FileType="3"
 				>
@@ -776,11 +786,7 @@
 			>
 		</File>
 		<File
-			RelativePath=".\Sample.dml"
-			>
-		</File>
-		<File
-			RelativePath=".\Splash16.bmp"
+			RelativePath=".\ReadMe.txt"
 			>
 		</File>
 	</Files>
