--- a/simulation/output/output.vcproj
+++ b/simulation/output/output.vcproj
@@ -150,7 +150,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\DensimData.cpp"
+				RelativePath=".\DensimOutput.cpp"
 				>
 			</File>
 			<File
@@ -196,7 +196,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\DensimData.h"
+				RelativePath=".\DensimOutput.h"
 				>
 			</File>
 			<File
