- Added excel interop code in lhsmod to convert large excel xml files into smaller excel xls files in binary 96-2003 format.

--- a/lhs/lhsmod/lhsmod.vcproj
+++ b/lhs/lhsmod/lhsmod.vcproj
@@ -192,6 +192,11 @@
 			ReferencedProjectIdentifier="{C2329981-C757-474F-A90A-E11DBDA868BE}"
 			RelativePathToProject=".\gui\objs\objs.vcproj"
 		/>
+		<ActiveXReference
+			ControlGUID="{00020813-0000-0000-C000-000000000046}"
+			ControlVersion="1.6"
+			LocaleID="0"
+		/>
 	</References>
 	<Files>
 		<Filter
