- Changed use of "Graph" to "Plot" to avoid confusing and clashing terminology in other parts of gui code.

--- a/gui/output/output.vcproj
+++ b/gui/output/output.vcproj
@@ -234,11 +234,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Graphs.h"
+				RelativePath=".\Outputs.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Outputs.h"
+				RelativePath=".\Plots.h"
 				>
 			</File>
 			<File
