--- a/gui/output/output.vcproj
+++ b/gui/output/output.vcproj
@@ -234,11 +234,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Outputs.h"
+				RelativePath=".\Graphs.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Plots.h"
+				RelativePath=".\Outputs.h"
 				>
 			</File>
 			<File
