- Integrated output_refactor branch back to trunk. - gui::output namespace was refactored for a cleaner design.  Of significance, output::CimsimOutput and output::DensimOutput now hold simulation output and create outputs, plots, and charts as needed. - Modified ProcessCimsimOutput and ProcessDensimOutput in gui::Location to process output as needed for new output classes. - Added helper methods to Location.cpp to assist in above process, namely converting std::vector<> types to managed array<> types. - Added missing data accessor methods in simulation::output::DensimOutput. - Removed need to start and stop date arguments for methods that previously used them in sim::output::DensimOutput.  Instead data for course of simulation is returned. - Renamed sim::output::DensimOutput serology related members use the terms "Distribution" and "Prevalence" as appropriate, - Moved initialization of sim::ds::SimLocation::Output_ to denmain() instead of constructor so that start and stop dates can be passed. - Added concept of "seroprevalence classes", that is the classes/categories for which age specific seroprevalence rates are available, which do not map to age classes directly. - Added output::SeroClass enum for seroprevalence classes. - Removed no longer used members gui::Location::DensimSeries_ and gui::Location::SerotypeSeries_. - Modified CimsimOutputForm, DensimOutputForm, CimsimExtOutputForm, and DensimExtOutputForm to use new managed output classes. - Added age specific seroprevalence graphs to DensimExtOutputForm. - ChartForm now sets its title from ChartInfo argument. - ChartForm now checks for custom y axis range. - ChartForm now defaults to using 1% of the Y range for zoom purposes. - CHG: Excel files are now better formatted with dates and numbers recognized as such. - CHG: Added per serotype general serology distribution charts to DENSiM gui. - CHG: Added per serotype age specific seroprevalence charts to DENSiM gui. - SimOutput::GenerateExcelXml now adds better x

--- a/gui/output/output.vcproj
+++ b/gui/output/output.vcproj
@@ -176,6 +176,14 @@
 			RelativePath="System.XML.dll"
 			AssemblyName="System.Xml, Version=2.0.0.0, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL"
 		/>
+		<AssemblyReference
+			RelativePath="c:\Program Files\Dundas Software\Charting\WinControlVS2005\bin\DundasWinChart.dll"
+			AssemblyName="DundasWinChart, Version=5.5.1.1700, PublicKeyToken=a4c03dce5db22406, processorArchitecture=MSIL"
+		/>
+		<AssemblyReference
+			RelativePath="System.Windows.Forms.dll"
+			AssemblyName="System.Windows.Forms, Version=2.0.0.0, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL"
+		/>
 	</References>
 	<Files>
 		<Filter
@@ -188,7 +196,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Charts.cpp"
+				RelativePath=".\CimsimOutput.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\DensimOutput.cpp"
 				>
 			</File>
 			<File
@@ -227,6 +239,14 @@
 			>
 			<File
 				RelativePath=".\Charts.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CimsimOutput.h"
+				>
+			</File>
+			<File
+				RelativePath=".\DensimOutput.h"
 				>
 			</File>
 			<File
