- Refactored cs 1.0 output parser to combine survival data into respective container spreadsheet.

--- a/util/parsecs1/parsecs1.vcproj
+++ b/util/parsecs1/parsecs1.vcproj
@@ -208,6 +208,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\HelpForm.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\MainForm.cpp"
 				>
 			</File>
@@ -248,6 +252,16 @@
 			<File
 				RelativePath=".\CimsimParser.h"
 				>
+			</File>
+			<File
+				RelativePath=".\HelpForm.h"
+				FileType="3"
+				>
+				<File
+					RelativePath=".\HelpForm.resx"
+					SubType="Designer"
+					>
+				</File>
 			</File>
 			<File
 				RelativePath=".\MainForm.h"
