--- a/simulation/densim/densim.vcproj
+++ b/simulation/densim/densim.vcproj
@@ -18,7 +18,7 @@
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)\$(ProjectName)"
 			ConfigurationType="4"
 			CharacterSet="1"
 			>
@@ -79,7 +79,7 @@
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)\$(ProjectName)"
 			ConfigurationType="4"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
@@ -144,7 +144,6 @@
 		/>
 		<ProjectReference
 			ReferencedProjectIdentifier="{466359A9-64B1-48C1-BD22-4AB59089DFC1}"
-			RelativePathToProject=".\simulation\log\log.vcproj"
 		/>
 	</References>
 	<Files>
