- Fixed reference for cimsim and densim projects. - Temporarily renamed managed output project to output1 to prevent directory collision with new output and intermediate directories.

--- a/simulation/cimsim/cimsim.vcproj
+++ b/simulation/cimsim/cimsim.vcproj
@@ -143,6 +143,10 @@
 			ReferencedProjectIdentifier="{EF97B474-CAB2-4890-ABF6-46C64A56DEF0}"
 			RelativePathToProject=".\simulation\input\input.vcproj"
 		/>
+		<ProjectReference
+			ReferencedProjectIdentifier="{D83788CB-CAE8-4537-B69B-65C06CC594E8}"
+			RelativePathToProject=".\simulation\output\output.vcproj"
+		/>
 	</References>
 	<Files>
 		<Filter
