--- a/simulation/densim/densim.vcproj
+++ b/simulation/densim/densim.vcproj
@@ -143,7 +143,8 @@
 			RelativePathToProject=".\simulation\input\input.vcproj"
 		/>
 		<ProjectReference
-			ReferencedProjectIdentifier="{466359A9-64B1-48C1-BD22-4AB59089DFC1}"
+			ReferencedProjectIdentifier="{D83788CB-CAE8-4537-B69B-65C06CC594E8}"
+			RelativePathToProject=".\simulation\output\output.vcproj"
 		/>
 	</References>
 	<Files>
