- Added Settings class to encapsulate user Settings. - Added OptionsForm to allow editing of user Settings. - Added MainForm::ReadSettings, MainForm::WriteSettings, MainForm::ShowOptions to enable reading, writing, and editing of user settings. - Modified MainForm::Initialize to read user Settings. - Modified MainForm::Exit to write user Settings. - Added MainForm::OnFormClosing to capture program closing via ALT+F4, exit icon, etc. vs. menu entry. - Modified OpenSampleLocation to prompt for save similar to other open methods. - Minor edits of assembly info in gui project. - Added denmod.cfg, xml based user settings file, deployed into user Application Data folder. - CHG: Added options dialog via Tools menu to allow editing of user settings. - CHG: Closing program via exit icon, ALT+F4, or system menu now correctly prompts for save.

--- a/gui/gui/gui.vcproj
+++ b/gui/gui/gui.vcproj
@@ -312,7 +312,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\OptionsForms.cpp"
+				RelativePath=".\OptionsForm.cpp"
 				>
 			</File>
 			<File
@@ -341,6 +341,10 @@
 			</File>
 			<File
 				RelativePath=".\ScheduleControl.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Settings.cpp"
 				>
 			</File>
 			<File
@@ -606,11 +610,12 @@
 				</File>
 			</File>
 			<File
-				RelativePath=".\OptionsForms.h"
+				RelativePath=".\OptionsForm.h"
 				FileType="3"
 				>
 				<File
-					RelativePath=".\OptionsForms.resx"
+					RelativePath=".\OptionsForm.resx"
+					SubType="Designer"
 					>
 				</File>
 			</File>
@@ -681,6 +686,10 @@
 					SubType="Designer"
 					>
 				</File>
+			</File>
+			<File
+				RelativePath=".\Settings.h"
+				>
 			</File>
 			<File
 				RelativePath=".\SingleSchedulePanel.h"
@@ -786,6 +795,21 @@
 				>
 			</File>
 		</Filter>
+		<File
+			RelativePath=".\denmod.cfg"
+			DeploymentContent="true"
+			>
+			<FileConfiguration
+				Name="Release|Win32"
+				>
+				<Tool
+					Name="VCCustomBuildTool"
+					Description="Updating denmod.cfg"
+					CommandLine="denmod.cfg &gt; $(TargetDir)\denmod.cfg"
+					Outputs="denmod.cfg"
+				/>
+			</FileConfiguration>
+		</File>
 		<File
 			RelativePath=".\licenses.licx"
 			>
