- Minor fixes to CimsimMain chart creation. - Fixed default user settings in denmod.cfg. - Added integration of Settings class into CimsimPanel and CimsimOutputForm. - CHG: CIMSiM's main graph output is now scaled based on user settings.

--- a/gui/gui/gui.vcproj
+++ b/gui/gui/gui.vcproj
@@ -805,7 +805,7 @@
 				<Tool
 					Name="VCCustomBuildTool"
 					Description="Updating denmod.cfg"
-					CommandLine="denmod.cfg &gt; $(TargetDir)\denmod.cfg"
+					CommandLine="denmod.cfg &gt; $(TargetDir)\denmod.cfg&#x0D;&#x0A;"
 					Outputs="denmod.cfg"
 				/>
 			</FileConfiguration>
