--- a/gui/gui/denmod.cfg
+++ b/gui/gui/denmod.cfg
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <Settings xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <StochasticAdvancement>true</StochasticAdvancement>
+  <StochasticAdvancement>false</StochasticAdvancement>
   <ScaleCimsimMainGraph>true</ScaleCimsimMainGraph>
 </Settings>
