--- a/util/parsecs1/parsedos.vcproj
+++ b/util/parsecs1/parsedos.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8.00"
-	Name="parsecs1"
+	Name="parsedos"
 	ProjectGUID="{DD4542A3-648F-4282-9B77-4786F6B917A6}"
 	RootNamespace="parsecs1"
 	Keyword="ManagedCProj"
