- Saved state of excel/txt options to config file. - Added outline of DensimParser class.

--- a/util/parsedos/parsedos.vcproj
+++ b/util/parsedos/parsedos.vcproj
@@ -204,6 +204,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\DensimParser.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\ExcelOutput.cpp"
 				>
 			</File>
@@ -251,6 +255,10 @@
 			>
 			<File
 				RelativePath=".\CimsimParser.h"
+				>
+			</File>
+			<File
+				RelativePath=".\DensimParser.h"
 				>
 			</File>
 			<File
