- Refactored Excel objects into Worksheet/Workbook objects in managed code. - Removed unmanaged code for Excel output. - Completed refactoring of DOS output.

--- a/util/parsedos/parsedos.vcproj
+++ b/util/parsedos/parsedos.vcproj
@@ -208,7 +208,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\ExcelOutput.cpp"
+				RelativePath=".\ExcelWorkbook.cpp"
 				>
 			</File>
 			<File
@@ -266,7 +266,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\ExcelOutput.h"
+				RelativePath=".\ExcelWorkbook.h"
 				>
 			</File>
 			<File
