--- a/simulation/dsport/dsport.vcproj
+++ b/simulation/dsport/dsport.vcproj
@@ -18,7 +18,7 @@
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)\$(ProjectName)"
 			ConfigurationType="4"
 			CharacterSet="1"
 			>
@@ -41,10 +41,9 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
-				MinimalRebuild="true"
+				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
-				FloatingPointModel="1"
 				UsePrecompiledHeader="2"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -81,7 +80,7 @@
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)\$(ProjectName)"
 			ConfigurationType="4"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
@@ -103,7 +102,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="2"
 				WarningLevel="3"
@@ -140,6 +139,14 @@
 		</Configuration>
 	</Configurations>
 	<References>
+		<ProjectReference
+			ReferencedProjectIdentifier="{EF97B474-CAB2-4890-ABF6-46C64A56DEF0}"
+			RelativePathToProject=".\simulation\input\input.vcproj"
+		/>
+		<ProjectReference
+			ReferencedProjectIdentifier="{D83788CB-CAE8-4537-B69B-65C06CC594E8}"
+			RelativePathToProject=".\simulation\output\output.vcproj"
+		/>
 	</References>
 	<Files>
 		<Filter
@@ -152,19 +159,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Location.cpp"
-				>
-			</File>
-			<File
 				RelativePath=".\PdsRng.cpp"
 				>
 			</File>
 			<File
 				RelativePath=".\Population.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\SimLocation.cpp"
 				>
 			</File>
 			<File
@@ -202,10 +201,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Location.h"
-				>
-			</File>
-			<File
 				RelativePath=".\PdsRng.h"
 				>
 			</File>
@@ -215,10 +210,6 @@
 			</File>
 			<File
 				RelativePath=".\SimConstants.h"
-				>
-			</File>
-			<File
-				RelativePath=".\SimLocation.h"
 				>
 			</File>
 			<File
