--- a/simulation/dsport/dsport.vcproj
+++ b/simulation/dsport/dsport.vcproj
@@ -197,6 +197,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\DensimClasses.h"
+				>
+			</File>
+			<File
 				RelativePath=".\dsport.h"
 				>
 			</File>
