- Renamed all projects with a new hierarchical system to avoid nested folder and allow for unique project names.  See http://www.ssw.com.au/ssw/Standards/DeveloperDotNet/DotNetStandard_ProjectNaming.aspx.

--- a/gui/ctrl/ctrl.vcproj
+++ b/gui/ctrl/ctrl.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8.00"
-	Name="ctrls"
+	Name="denmod.ui.ctrls"
 	ProjectGUID="{92B00CE3-2DD3-4FF3-90B8-406836D45EC6}"
 	RootNamespace="ctrls"
 	Keyword="ManagedCProj"
