--- a/lhs/lhsmod/lhsmod.vcproj
+++ b/lhs/lhsmod/lhsmod.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8.00"
-	Name="lhsmod"
+	Name="denmod.ui.lhsmod"
 	ProjectGUID="{397D8A84-12D0-4BB5-B0C5-F6DDC633B545}"
 	RootNamespace="lhsmod"
 	Keyword="ManagedCProj"
