--- a/simulation/input/input.vcproj
+++ b/simulation/input/input.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8.00"
-	Name="input"
+	Name="denmod.simulation.input"
 	ProjectGUID="{EF97B474-CAB2-4890-ABF6-46C64A56DEF0}"
 	RootNamespace="input"
 	Keyword="Win32Proj"
