--- a/simulation/output/output.vcproj
+++ b/simulation/output/output.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8.00"
-	Name="output1"
+	Name="denmod.simulation.output"
 	ProjectGUID="{D83788CB-CAE8-4537-B69B-65C06CC594E8}"
 	RootNamespace="output"
 	Keyword="Win32Proj"
