--- a/gui/lhsmod/lhsmod.vcproj
+++ b/gui/lhsmod/lhsmod.vcproj
@@ -135,6 +135,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="$(NoInherit)"
+				OutputFile="$(OutDir)\dmlhs.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="2"
