- Added basic log class to handle disk output from within simulation. BugzID: 281

--- a/simulation/output/output.vcproj
+++ b/simulation/output/output.vcproj
@@ -154,6 +154,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Log.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\MosData.cpp"
 				>
 			</File>
@@ -201,6 +205,10 @@
 			</File>
 			<File
 				RelativePath=".\DensimOutput.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Log.h"
 				>
 			</File>
 			<File
